src/styles/App.css
/* src/App.css */

body {
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  background-color: #f4f4f9;
  color: #333;
  line-height: 1.5;
}

/* Header Styles */
.header {
  background-color: #333;
  color: #fff;
  padding: 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative; /* Add position relative for absolute positioning of hamburger menu */
}

.header .logo {
  font-size: 1.5rem;
}

.logo a {
  color: #fff;
  text-decoration: none;
  transition: color 0.3s;
}

.header nav ul {
  list-style: none;
  display: flex;
  gap: 1rem;
}

.header nav ul li a {
  color: #fff;
  text-decoration: none;
  transition: color 0.3s;
}

.header nav ul li a:hover {
  color: #f4f4f9;
}

/* Hamburger Menu Styles */
.hamburger-menu {
  background: none;
  border: none;
  cursor: pointer;
  display: block; /* Hide by default on larger screens */
  padding: 0; /* Remove default padding */
}

.hamburger-menu .svg-inline--fa { /* Targeting the Font Awesome icon */
  color: #fff;
  font-size: 1.5rem;
}

/* Mobile Menu Styles */
.nav-links {
  position: absolute;
  top: 100%; /* Position below the header */
  left: 0;
  width: 100%;
  background-color: #333;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;
  transform: translateX(-100%); /* Initially hidden off-screen to the left */
  transition: transform 0.3s ease-in-out; /* Add a smooth transition */
}

.nav-links.show {
  transform: translateX(0); /* Slide in from the left when active */
  z-index: 10;
}

.nav-links ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%; /* Ensure ul takes full width */
}

.nav-links li {
  text-align: center;
  width: 100%; /* Ensure li takes full width */
}

/* Media Query for Mobile */
@media (max-width: 767px) {
  .header nav {
    display: none; /* Hide the default navigation on mobile */
  }

  .hamburger-menu {
    display: block; /* Show the hamburger menu on mobile */
    margin-left: auto; /* Align the hamburger menu to the right */
  }

  .header .nav-links.show {
    display: flex;
  }
}

.about,
.projects,
.contact,
.technologies {
  background-color: #dcdde0;
  margin: 1rem 0;
  padding: 2rem;
  border-radius: 8px;
}

/* Project and Technology List Styles */
.project-list,
.technology-list {
  display: flex;
  justify-content: center;
  gap: 2rem;
}

.project-list {
  flex-wrap: wrap;
  width: 100%;
}

.project-card,
.technology-card {
  background-color: #fff;
  padding: 1rem;
  border-radius: 8px;
  width: 200px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.project-card a,
.technology-card a {
  text-decoration: none;
  color: #007bff;
}

.project-card a:hover,
.technology-card a:hover {
  text-decoration: none;
}

.project-card .icon {
  justify-content: center;
}

.project-card h3 {
  color: black;
}

.project-card p {
  color: gray;
}

.project-card img {
  max-width: 100%;
  max-height: 100px;
  height: auto;
}

/* Icon and Tooltip Styles */
.icon {
  position: relative;
  display: inline-block;
  font-size: 1.5rem;
  color: #333;
  transition: color 0.3s;
}

.icon:hover {
  color: #007bff;
}

.icon .tooltip {
  display: none;
  position: absolute;
  padding: 5px 10px;
  border-radius: 4px;
  font-size: 14px;
  color: gray;
  font-style: italic;
  left: 50%;
  transform: translateX(-50%);
  bottom: calc(-55% - 5px);
  white-space: nowrap;
}

.icon:hover .tooltip {
  display: block;
}

/* Contact Links Styles */
.contact-links {
  margin-top: 1rem;
}

.social-icons {
  display: flex;
  justify-content: center;
  gap: 1rem;
  margin-top: 0.5rem;
}

/* src/App.css */

/* ... other styles ... */

.post-container,
.post-list {
  max-width: 1200px;
  margin: 20px auto;
  padding: 20px;
  text-align: justify;
  hyphens: auto;
  -webkit-hyphens: auto; /* For Safari */
  -ms-hyphens: auto; /* For older versions of IE */
}

/* Mobile Styles (Default) */
@media (max-width: 767px) {
    .post-container, .post-list {
        text-align: left;
    }
}

/*.post-container, .post-list {
  max-width: 1200px;
  margin: 20px auto;
  padding: 20px;
  text-align: justify;
}*/

.content-wrapper {
  display: flex;
  transition: all 0.3s ease;
}

.post-content {
  flex-grow: 1;
  transition: max-width 0.3s ease;
  padding-right: 20px; /* Add padding to the right */
}

/* Table of Contents Styles */
.table-of-contents {
    margin-bottom: 20px;
    list-style: none;
    padding: 0;
}

.table-of-contents a {
  text-decoration: none;
}

.table-of-contents a:hover {
  text-decoration: underline;
}

.table-of-contents.non-sticky-toc {
  margin-top: 20px;
  margin-bottom: 20px;
}

.table-of-contents li details > summary {
  list-style: none;
  width: 100%;
  display: block;
  cursor: pointer;
}

.table-of-contents li details[open] > summary {
  list-style: none;
}

.table-of-contents li details[open] > summary::before {
  content: "▾";
  margin-right: 5px;
  display: inline-block;
}

.table-of-contents li details > summary::before {
  content: "▸";
  margin-right: 5px;
  display: inline-block;
}

.table-of-contents ul {
  width: max-content;
  padding-left: 20px;
}

/* Floating TOC Icon Styles */
.floating-toc-icon {
  position: fixed;
  bottom: 20px;
  left: 20px;
  width: 40px;
  height: 40px;
  background-color: #007bff;
  color: #fff;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  z-index: 1000;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
}

.floating-toc-icon:hover {
  background-color: #0056b3;
}

/* TOC Modal Styles */
.toc-modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.toc-modal-content {
  background-color: #fff;
  padding: 20px;
  border-radius: 5px;
  max-width: 80%;
  max-height: 80%;
  overflow-y: auto;
}

.close-modal {
  position: absolute;
  top: 10px;
  right: 10px;
  background: none;
  border: none;
  font-size: 20px;
  cursor: pointer;
}

/* Larger Screen Styles (Tablet and Desktop) */
@media (min-width: 768px) {
  .content-wrapper {
    justify-content: flex-start; /* Align content to the left */
  }

  .post-content {
    order: -1; /* Move the content to the left of the TOC */
    max-width: 80%;
    margin-left: 20px; /* Add margin to the left */
    margin-right: 20px;
  }

  .toc-wrapper {
    flex: 0 0 30%; /* TOC takes up 20% */
    max-width: 30%; /* Ensure TOC doesn't exceed 20% */
    position: sticky;
    top: 0;
    align-self: flex-start;
    overflow-y: auto;
    height: 100vh;
    padding-top: 20px;
  }

  .table-of-contents {
    width: 100%;
  }

  .table-of-contents ul {
    width: 100%; /* Ensure nested lists don't collapse */
    padding-left: 1rem; /* Adjust padding for nested lists */
  }

  .table-of-contents li {
    width: 100%; /* Ensure list items take full width of their container */
  }

  /* Remove margin from sticky-toc */
  .sticky-toc {
    margin-right: 0;
  }

  /* Hide the non-sticky TOC on desktop */
  .table-of-contents.non-sticky-toc {
    display: none;
  }

  /* Hide floating icon and modal on desktop */
  .floating-toc-icon,
  .toc-modal {
    display: none;
  }

  /* Remove width limitation for subsections on desktop */
  .table-of-contents li details > summary {
    width: auto;
  }
}

.preserve-newlines {
  white-space: pre-wrap;
}

.post-container blockquote {
  border-left: 5px solid #eee;
  padding-left: 20px;
  font-style: italic; /* Add this line to make blockquote text italic */
  margin: 20px 0;
}

.search-bar {
  padding: 10px;
  display: flex;
  justify-content: center;
}

.search-bar input {
  width: 50%;
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 4px;
  font-size: 16px;
}

.pagination {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  list-style: none;
  padding: 0;
}

.pagination li {
  margin: 0 5px;
  cursor: pointer;
}

.pagination li a {
  padding: 5px 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
}

.pagination li.active a {
  background-color: #007bff; /* Your primary color */
  color: white;
  border-color: #007bff;
}

.post-list {
    max-width: 800px;
    margin: 20px auto;
    padding: 20px;
    text-align: justify;
    word-spacing:-2px;
}

.post-list h2 {
  font-size: 1.4rem;
  margin-top: 10px;
  margin-bottom: 0.5rem;
}

.post-list h2 a {
  color: #007bff; /* A nicer blue color */
  text-decoration: none;
  font-weight: 600;
}

.post-list h2 a:hover {
  color: #0056b3; /* Darker blue on hover */
  text-decoration: underline;
}

.post-list p {
  margin-bottom: 1rem;
}

.post-tags {
  margin-top: 20px; /* Add some space above the tags */
}

.tag {
  display: inline-block;
  background-color: #e9ecef; /* Light gray background */
  padding: 5px 10px;
  margin-right: 5px;
  margin-bottom: 5px;
  border-radius: 3px;
  font-size: 0.9rem;
}

/* Larger Screen Styles (Tablet and Desktop) */
@media (min-width: 768px) {
  .content-wrapper {
    justify-content: flex-start; /* Align content to the left */
  }

  .post-content {
    order: -1; /* Move the content to the left of the TOC */
    max-width: 80%;
    margin-left: 20px; /* Add margin to the left */
    margin-right: 20px;
  }

  .toc-wrapper {
    flex: 0 0 30%; /* TOC takes up 20% */
    max-width: 30%; /* Ensure TOC doesn't exceed 20% */
    position: sticky;
    top: 0;
    align-self: flex-start;
    overflow-y: auto;
    height: 100vh;
    padding-top: 20px;
  }

  .table-of-contents {
    width: 100%;
  }

  .table-of-contents ul {
    width: 100%; /* Ensure nested lists don't collapse */
    padding-left: 1rem; /* Adjust padding for nested lists */
  }

  .table-of-contents li {
    width: 100%; /* Ensure list items take full width of their container */
  }

  /* Remove margin from sticky-toc */
  .sticky-toc {
    margin-right: 0;
  }

  /* Hide the non-sticky TOC on desktop */
  .table-of-contents.non-sticky-toc {
    display: none;
  }

  /* Hide floating icon and modal on desktop */
  .floating-toc-icon,
  .toc-modal {
    display: none;
  }

  /* Remove width limitation for subsections on desktop */
  .table-of-contents li details > summary {
    width: auto;
  } 
}

.preserve-newlines {
  white-space: pre-wrap;
}

#contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.post-navigation {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.previous-post,
.next-post {
  text-decoration: none;
  color: #007bff; /* Or your preferred link color */
}

.previous-post:hover,
.next-post:hover {
  text-decoration: underline;
}

.author-bio {
  margin-top: 40px; /* Add some space above the author bio */
  padding: 20px;
  border-top: 1px solid #eee; /* Add a separator line */
  background-color: #f8f8f8; /* A light background color */
  border-radius: 5px;
}

.author-bio h3 {
  font-size: 1.2rem;
  margin-bottom: 10px;
}

.author-bio p {
  font-size: 0.9rem;
  line-height: 1.6;
}

